16-feat: creacion de los endpoints de Suscripcion, metodosPago, pagos y sus respectivos controladores. doc: cambios en swagger.yaml
