# src/routes/metodos-pago.js
@@ -1,10 +1,11 @@
 import { Router } from "express";
-import { DatosPagoUsuario } from "../models/index.js";
+import { getMetodosPago, createMetodoPago } from "../controllers/metodosPagoController.js";
 
 const metodosPagoRouter = Router();
 
-metodosPagoRouter.get("/", async (req, res) => {
-    res.send("Obtener todos los Metodos de Pago");
-});
+// Función para buscar todos los Métodos de Pago.
+metodosPagoRouter.get("/", getMetodosPago);
+// Funcion para crear un nuevo Método de Pago.
+metodosPagoRouter.post("/", createMetodoPago);
 
 export default metodosPagoRouter;
