# src/routes/pagos.js
@@ -1,11 +1,11 @@
 import { Router } from "express";
-import { Pago } from "../models/index.js";
+import { getPagos, createPago } from "../controllers/pagosController.js";
 
 const pagosRouter = Router();
 
 // Funcion para buscar todos los Pagos.
-pagosRouter.get("/", async (req, res) => {
-    res.send("Obtener todos los Pagos");
-});
+pagosRouter.get("/", getPagos);
+// Funcion para crear un nuevo Pago.
+pagosRouter.post("/", createPago);
 
 export default pagosRouter;
